# faris

./: Cargo.toml  README.md
config/: config.toml
src/: config.rs  embed.rs  error.rs  lance.rs  lib.rs  main.rs  upload.rs  util.rs
