[package]
name = "faris"
description = "Server for graph embeddings and similarity search"
version = "0.0.1"
edition = "2024"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/faris"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.38", features = ["cargo"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
home = "0.5.11"
log = "0.4.27"
simplelog = "0.12.2"
neo4rs = "0.8.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
humantime = "2.2.0"
