[package]
name = "faris"
description = "Server for graph embeddings and similarity search"
version = "0.0.1"
edition = "2024"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/faris"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
home = "0.5.11"
log = "0.4.27"
simplelog = "0.12.2"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
chrono = "0.4.41"
candle-core = "0.9.1"
candle-transformers = "0.9.1"
candle-nn = "0.9.1"
tokenizers = "0.21.2"
serde_json = "1.0.140"
